src/test/deca/context/valid/methods/local_var_a_mettre_dans_invalid.deca
// Description :
//    Variable locale en conflit illégal avec un champ.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int x;
    int f() {
        int x = 3;
        return x;
    }
}

{
}
