src/test/deca/context/invalid/return/return_wrong_type_string_in_int.deca
// Description :
//    Retour d'une valeur string dans une méthode retournant int.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        return "abc";
    }
}

{
}

